--- a/_layouts/solution.html
+++ b/_layouts/solution.html
@@ -13,6 +13,6 @@ layout: default
   <small>tags: <em>{{ page.tags | join: "</em> - <em>" }}</em></small>
 {% endif %}
 
-{% if page.bundles %}
+{% if page.bundle %}
   <script src="{{ page.bundle }}"></script>
 {% endif %}
