--- a/_layouts/solution.html
+++ b/_layouts/solution.html
@@ -16,5 +16,5 @@ layout: default
 {% if page.bundles %}
   {% for bundle in page.bundles %}
     <script src="{{ bundle }}"></script>
-  {% endif %}
+  {% endfor %}
 {% endif %}
