--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -63,5 +63,7 @@
       ga('send', 'pageview');
     </script>
     {% endif %}
+    {% block scripts %}
+    {% endblock scripts %}
   </body>
 </html>
