--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,9 +38,9 @@
           </ul>
         {% endif %}
         
-        {% if site.posts %}
+        {% if site.test %}
           <ul>
-            {% for post in site.posts %}
+            {% for post in site.test %}
               <li>
                 <a href="{{ post.url }}">{{ post.title }}</a>
               </li>
