--- a/_sass/_print.scss
+++ b/_sass/_print.scss
@@ -1,54 +1,3 @@
-body {
-    margin: 0;
-    padding: 0;
-    font-size: 14px;
-}
-
-.page {
-    width: 595px;
-    min-height: 842px;
-    margin: 0 auto;
-    box-sizing: border-box;
-    border: 1px solid red;
-    min-height: 842px;
-    padding: 1cm;
-}
-
-.header {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-}
-
-.header__title {
-    text-align: center;
-}
-
-.header__logo-wrapper {
-    text-align: center;
-}
-
-.header__logo {
-    /*width: 200px;*/
-    width: 35%;
-}
-
-.header__description {
-    text-align: center;
-}
-
-.header__persons {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-end;
-}
-
-.header__footer {
-    text-align: center;
-}
-
-
-
 @media print {
     *,
     *:before,
@@ -62,6 +11,55 @@ body {
         color: #000 !important;
         box-shadow: none !important;
         text-shadow: none !important;
+    }
+
+    .header {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+
+        &__title {
+            text-align: center;
+        }
+
+        &__logo-wrapper {
+            text-align: center;
+        }
+
+        &__logo {
+            /*width: 200px;*/
+            width: 35%;
+        }
+
+        &__description {
+            text-align: center;
+        }
+
+        &__persons {
+            display: flex;
+            flex-direction: column;
+            align-items: flex-end;
+        }
+
+        &__footer {
+            text-align: center;
+        }
+    }
+    
+    body {
+        margin: 0;
+        padding: 0;
+        font-size: 14px;
+    }
+
+    .page {
+        width: 595px;
+        min-height: 842px;
+        margin: 0 auto;
+        box-sizing: border-box;
+        border: 1px solid red;
+        min-height: 842px;
+        padding: 1cm;
     }
 
     .page {
