--- a/_sass/_print.scss
+++ b/_sass/_print.scss
@@ -13,7 +13,7 @@
         text-shadow: none !important;
     }
 
-    .header {
+    .print-header {
         display: flex;
         flex-direction: column;
         justify-content: space-between;
@@ -72,7 +72,7 @@
         page-break-before: always;
     }
 
-    .header {
+    .print-header {
         min-height: 100vh;
     }
 
