--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
 {% seo %}
+
     <link rel="stylesheet" href="{{ "/assets/css/style.css?v=" | append: site.github.build_revision | relative_url }}">
     <!--[if lt IE 9]>
     <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
@@ -40,6 +41,13 @@
         
       </header>
       <section>
+        {% if site.posts %}
+          <ul>
+            {% for post in site.posts %}
+              <li><a href="{{ post.url }}"><strong>{{ post.title }}</strong></a></li>
+            {% endfor %}
+          </ul>
+        {% endif %}
 
       {{ content }}
 
