--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a> | {{ site.github.repository_name }}</h1>
+        <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
         
         {% if site.logo %}
           <img src="{{site.logo | relative_url}}" alt="Logo" />
@@ -44,7 +44,7 @@
         {% if site.posts %}
           <ul>
             {% for post in site.posts %}
-              <li><a href="{{ '' + post.url }}"><strong>{{ post.title }}</strong></a></li>
+              <li><a href="/{{ site.github.repository_name }}{{ post.url }}"><strong>{{ post.title }}</strong></a></li>
             {% endfor %}
           </ul>
         {% endif %}
