--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,6 +43,10 @@
       <section>
 
       {{ content }}
+        
+{% for repository in site.github.public_repositories %}
+  * [{{ repository.name }}]({{ repository.html_url }})
+{% endfor %}
 
       </section>
       <footer>
