--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -9,8 +9,14 @@ body {
 }
 
 header {
+  width: 200px;
+  
   img {
     padding: 40px;
     box-sizing: border-box;
   }
+}
+
+section {
+  width: 600px;
 }
