--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -24,6 +24,10 @@ header {
   img {
     padding: 40px;
     box-sizing: border-box;
+    
+    @media print, screen and (max-width: 960px) {
+      max-width: 200px;
+    }
   }
 }
 
