--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -7,6 +7,7 @@
 body {
   background-color: #fff;
   margin: 0;
+  color: #333;
 }
 
 .wrapper {
@@ -38,9 +39,9 @@ section {
   width: 600px;
   
   p>code.highlighter-rouge {
-    background: rgba(27,31,35,0.05);
+    background: #F9F9F9;
     padding: 1px 5px;
     border-radius: 5px;
-    border: 1px solid #ccc;
+    border: 1px solid #DDD;
   }
 }
