--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,6 @@
     <div class="wrapper">
       <header>
         <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
-        <p>{{ site.github.public_repositories }}</p>
         
         {% if site.logo %}
           <img src="{{site.logo | relative_url}}" alt="Logo" />
@@ -44,6 +43,8 @@
       <section>
 
       {{ content }}
+        
+      <pre><code>{{ site.github.public_repositories }}</code></pre>
 
       </section>
       <footer>
