--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,7 +44,7 @@
 
       {{ content }}
         
-      <pre><code>{{ site.github.repository }}</code></pre>
+      <pre><code>{{ site.github.repository_contents }}</code></pre>
 
       </section>
       <footer>
