--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,11 +11,11 @@
     <!--[if lt IE 9]>
     <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
     <![endif]-->
-    {% if site.adsense %}
+    {% if site.google_adsense %}
     <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <script>
       (adsbygoogle = window.adsbygoogle || []).push({
-        google_ad_client: "ca-pub-{{ site.adsense }}",
+        google_ad_client: "ca-pub-{{ site.google_adsense }}",
         enable_page_level_ads: true
       });
     </script>
