--- a/mobile-development/BeatBox/app/src/main/res/layout/list_item_sound.xml
+++ b/mobile-development/BeatBox/app/src/main/res/layout/list_item_sound.xml
@@ -8,13 +8,14 @@
     </data>
     <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="8dp">
+            android:layout_height="150dp"
+            android:layout_margin="1dp">
         <androidx.appcompat.widget.AppCompatButton
-                android:layout_width="100dp"
-                android:layout_height="100dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:padding="8dp"
-                android:layout_gravity="center"
+                android:radius="0dp"
+                android:layout_gravity="fill"
                 android:onClick="@{() -> viewModel.onButtonClicked()}"
                 android:text="@{viewModel.sound.name}"
                 tools:text="sound name"/>
