--- a/mobile-development/BeatBox/app/src/main/res/drawable/button_beatbox_pressed.xml
+++ b/mobile-development/BeatBox/app/src/main/res/drawable/button_beatbox_pressed.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
-        <shape android:shape="oval">
+        <shape android:shape="rectangle">
             <solid android:color="@color/red"/>
         </shape>
     </item>
     <item>
-        <shape android:shape="oval">
+        <shape android:shape="rectangle">
             <stroke
                     android:color="@color/dark_red"
                     android:width="4dp"/>
