--- a/databases/frontend/src/index.scss
+++ b/databases/frontend/src/index.scss
@@ -5,6 +5,14 @@ body {
 	height: 100vh;
 }
 
+table {
+	width: 100%;
+
+	td {
+		vertical-align: middle;
+	}
+}
+
 .container {
 	padding: 0px 1em;
 }
